# my-rags-project

./: .gitignore  RAG_Playground.ipynb  RAG_System_Deep_Dive.ipynb  README.md  main.py  pyproject.toml  readme.md  requirements.txt  test.txt  typesense.ipynb
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  know.ipynb  search.ipynb
notebooks/: 01_Ingestion_Pipeline.ipynb  02_Retrieval_Architecture.ipynb  03_LLM_Generation.ipynb
src/: __init__.py  config.py  embeddings.py  ingestion.py  pipeline.py  retrieval.py  vectorstores.py
